--- a/kubernetes/apps/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -181,6 +181,14 @@ spec:
               resources:
                 requests:
                   storage: 5Gi
+        additionalScrapeConfigs:
+          - job_name: vault
+            metrics_path: /v1/sys/metrics
+            params:
+              format: ['prometheus']
+            scheme: http
+            static_configs:
+              - targets: ["vault.vault"]
   valuesFrom:
     - targetPath: alertmanager.config.global.slack_api_url
       kind: Secret
