--- a/kubernetes/apps/k0s/vault/vault-injector/app/kustomization.yaml
+++ b/kubernetes/apps/k0s/vault/vault-injector/app/kustomization.yaml
@@ -2,9 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: vault
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./vault/ks.yaml
-  - ./vault-injector/ks.yaml
+  - ./helmrelease.yaml
+  - ./ingress.yaml
