--- a/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
@@ -34,6 +34,21 @@ spec:
         storageClass: local-path
       standalone:
         enabled: "true"
+        config: |
+          ui = true
+
+          listener "tcp" {
+            tls_disable = 1
+            address = "[::]:8200"
+            cluster_address = "[::]:8201"            
+            telemetry {
+             prometheus_retention_time = "30s"
+             disable_hostname = true
+            }
+          }
+          storage "file" {
+            path = "/vault/data"
+          }
       # service:
       #   annotations:
       #     io.cilium/global-service: "true"
