--- a/kubernetes/apps/k8s/kube-system/kustomization.yaml
+++ b/kubernetes/apps/k8s/kube-system/kustomization.yaml
@@ -15,3 +15,4 @@ resources:
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
   - ./snapshot-controller/ks.yaml
+  - ./tetragon/ks.yaml
