--- a/kubernetes/flux/apps.yaml
+++ b/kubernetes/flux/apps.yaml
@@ -16,7 +16,9 @@ spec:
       - kind: ConfigMap
         name: cluster-settings
       - kind: Secret
-        name: cluster-secrets
+        name: shared-secrets
+      - kind: ConfigMap
+        name: shared-settings
   patches:
     - patch: |-
         apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -28,8 +30,10 @@ spec:
             substituteFrom:
               - kind: ConfigMap
                 name: cluster-settings
+              - kind: ConfigMap
+                name: shared-settings
               - kind: Secret
-                name: cluster-secrets
+                name: shared-secrets
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
