--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -33,6 +33,9 @@ spec:
       - kind: ConfigMap
         name: cluster-settings
         optional: false
+      - kind: ConfigMap
+        name: shared-settings
+        optional: false
       - kind: Secret
-        name: cluster-secrets
+        name: shared-secrets
         optional: false
