--- a/kubernetes/apps/shared/flux-system/addons/ks.yaml
+++ b/kubernetes/apps/shared/flux-system/addons/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-flux-addons
+  name: shared-apps-flux-addons
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k8s/flux-system/addons/app
+  path: ./kubernetes/apps/shared/flux-system/addons/app
   prune: true
   sourceRef:
     kind: GitRepository
