--- a/kubernetes/bootstrap/k8s/clustersettings.yaml
+++ b/kubernetes/bootstrap/k8s/clustersettings.yaml
@@ -6,3 +6,6 @@ metadata:
   namespace: flux-system
 data:
   ENVIRONMENT: k8s
+  DOMAIN: nucstack.com
+  CILIUM_ID: 1
+  CILIUM_IPAM_CIDR: 192.168.9.224/27
