--- a/kubernetes/apps/shared/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/shared/kube-system/cilium/ks.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-metrics-server
+  name: shared-apps-cilium
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k0s/kube-system/metrics-server/app
-  prune: true
+  path: ./kubernetes/apps/shared/kube-system/cilium/app
+  prune: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
