--- a/kubernetes/apps/shared/kube-system/coredns/ks.yaml
+++ b/kubernetes/apps/shared/kube-system/coredns/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-coredns
+  name: shared-apps-coredns
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k0s/kube-system/coredns/app
+  path: ./kubernetes/apps/shared/kube-system/coredns/app
   prune: false
   sourceRef:
     kind: GitRepository
