--- a/kubernetes/apps/shared/kube-system/local-path-provisioner/ks.yaml
+++ b/kubernetes/apps/shared/kube-system/local-path-provisioner/ks.yaml
@@ -2,11 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-cilium
+  name: shared-apps-local-path-provisioner
   namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/disabled: "true"
 spec:
-  path: ./kubernetes/apps/k0s/kube-system/cilium/app
-  prune: false
+  path: ./kubernetes/apps/shared/kube-system/local-path-provisioner/app
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
