--- a/kubernetes/apps/shared/kube-system/metrics-server/ks.yaml
+++ b/kubernetes/apps/shared/kube-system/metrics-server/ks.yaml
@@ -2,12 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-volsync
+  name: shared-apps-metrics-server
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: cluster-apps-snapshot-controller
-  path: ./kubernetes/apps/k0s/volsync/volsync/app
+  path: ./kubernetes/apps/shared/kube-system/metrics-server/app
   prune: true
   sourceRef:
     kind: GitRepository
