--- a/kubernetes/apps/shared/kube-system/reloader/ks.yaml
+++ b/kubernetes/apps/shared/kube-system/reloader/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-reloader
+  name: shared-apps-reloader
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k0s/kube-system/reloader/app
+  path: ./kubernetes/apps/shared/kube-system/reloader/app
   prune: true
   sourceRef:
     kind: GitRepository
