--- a/kubernetes/apps/shared/kube-system/snapshot-controller/ks.yaml
+++ b/kubernetes/apps/shared/kube-system/snapshot-controller/ks.yaml
@@ -2,17 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-local-path-provisioner
+  name: shared-apps-snapshot-controller
   namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/disabled: "true"
 spec:
-  path: ./kubernetes/apps/k0s/kube-system/local-path-provisioner/app
+  path: ./kubernetes/apps/shared/kube-system/snapshot-controller/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  wait: false
+  wait: true
   interval: 30m
   retryInterval: 1m
   timeout: 5m
