--- a/kubernetes/apps/shared/volsync/volsync/ks.yaml
+++ b/kubernetes/apps/shared/volsync/volsync/ks.yaml
@@ -2,15 +2,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-snapshot-controller
+  name: shared-apps-volsync
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k0s/kube-system/snapshot-controller/app
+  dependsOn:
+    - name: shared-apps-snapshot-controller
+  path: ./kubernetes/apps/shared/volsync/volsync/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  wait: true
+  wait: false
   interval: 30m
   retryInterval: 1m
   timeout: 5m
