--- a/kubernetes/apps/shared/monitoring/externalsecret.yaml
+++ b/kubernetes/apps/shared/monitoring/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
       version: "v2"
       auth:
         kubernetes:
-          mountPath: "kubernetes/k0s"
+          mountPath: "kubernetes/${ENVIRONMENT}"
           role: "monitoring"
           serviceAccountRef:
             name: "vault-auth"
