--- a/kubernetes/apps/shared/monitoring/grafana/app/ingress.yaml
+++ b/kubernetes/apps/shared/monitoring/grafana/app/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "grafana.nucstack.com"
+  - host: "grafana.${DOMAIN}"
     http:
       paths:
       - backend:
@@ -18,4 +18,4 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - "grafana.nucstack.com"
+    - "grafana.${DOMAIN}"
