--- a/kubernetes/apps/shared/monitoring/grafana/ks.yaml
+++ b/kubernetes/apps/shared/monitoring/grafana/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-grafana
+  name: shared-apps-grafana
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k8s/monitoring/grafana/app
+  path: ./kubernetes/apps/shared/monitoring/grafana/app
   prune: true
   sourceRef:
     kind: GitRepository
