--- a/kubernetes/apps/shared/monitoring/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/shared/monitoring/kube-prometheus-stack/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-grafana
+  name: shared-apps-kube-prometheus-stack
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k0s/monitoring/grafana/app
+  path: ./kubernetes/apps/shared/monitoring/kube-prometheus-stack/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -13,4 +13,4 @@ spec:
   wait: false
   interval: 30m
   retryInterval: 1m
-  timeout: 5m
+  timeout: 15m
