--- a/kubernetes/apps/shared/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/kube-system/cilium/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.0.0.0/8
-    k8sServiceHost: "k8s.${DOMAIN}"
+    k8sServiceHost: "${K8S_SERVICE_HOST}"
     k8sServicePort: 443
     kubeProxyReplacement: strict
     kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
