--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -106,7 +106,7 @@ tasks:
       - kubectl --context k8s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
       - vault write auth/kubernetes/k8s/config
           token_reviewer_jwt="$(kubectl --context k8s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
-          kubernetes_host="https://{{.K8S_VIP_IP}}"
+          kubernetes_host="$(kubectl --context k8s config view --minify | yq e '.clusters[].cluster.server')"
           kubernetes_ca_cert=@ca.crt
           disable_iss_validation=true
       - rm ca.crt
@@ -117,7 +117,7 @@ tasks:
       - kubectl --context k0s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
       - vault write auth/kubernetes/k0s/config
           token_reviewer_jwt="$(kubectl --context k0s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
-          kubernetes_host="https://{{.K0S_VIP_IP}}"
+          kubernetes_host="$(kubectl --context k0s config view --minify | yq e '.clusters[].cluster.server')"
           kubernetes_ca_cert=@ca.crt
           disable_iss_validation=true
       - rm ca.crt
