fix flux system k8s auth

--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
             clientID: "weave-gitops"
             clientSecret: "{{ .GITOPS_CLIENT_SECRET }}"
             issuerURL: "https://dex.logfold.com"
-            redirectURL: "https://gitops.nucstack.com/oauth2/callback"
+            redirectURL: "https://gitops.${DOMAIN}/oauth2/callback"
   dataFrom:
     - extract:
         key: /flux-system/weave-gitops
