--- a/kubernetes/apps/k8s/flux-system/externalsecret.yaml
+++ b/kubernetes/apps/k8s/flux-system/externalsecret.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: vault-auth
-  namespace: development
+  namespace: flux-system
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: vault-kv-backend
-  namespace: development
+  namespace: flux-system
 spec:
   provider:
     vault:
@@ -19,6 +19,6 @@ spec:
       auth:
         kubernetes:
           mountPath: "kubernetes/k8s"
-          role: "development"
+          role: "flux-system"
           serviceAccountRef:
             name: "vault-auth"
