--- a/kubernetes/apps/shared/kyverno/kyverno/ks.yaml
+++ b/kubernetes/apps/shared/kyverno/kyverno/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-kyverno
+  name: shared-apps-kyverno
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/k8s/kyverno/kyverno/app
+  path: ./kubernetes/apps/shared/kyverno/kyverno/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -18,12 +18,12 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-cluster-policies
+  name: shared-apps-cluster-policies
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-apps-kyverno
-  path: ./kubernetes/apps/k8s/kyverno/kyverno/policies
+    - name: shared-apps-kyverno
+  path: ./kubernetes/apps/shared/kyverno/kyverno/policies
   prune: true
   sourceRef:
     kind: GitRepository
