--- a/kubernetes/apps/k0s/home-automation/frigate/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/home-automation/frigate/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
             #   frigate.record: debug
 
           mqtt:
-            host: emqx.database.svc.cluster.local
+            host: 192.168.9.227
             topic_prefix: frigate
             user: "{{ .user_1_username }}"
             password: "{{ .user_1_password }}"
