readd cluster mesh

--- a/kubernetes/bootstrap/k0s/clustersettings.yaml
+++ b/kubernetes/bootstrap/k0s/clustersettings.yaml
@@ -9,4 +9,5 @@ data:
   DOMAIN: logfold.com
   CILIUM_ID: "2"
   CILIUM_IPAM_CIDR: 192.168.9.112/28
+  CILIUM_MESH_LB_IP: 192.168.9.114
   K8S_SERVICE_HOST: 192.168.9.8
