--- a/kubernetes/apps/shared/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/kube-system/cilium/app/helmrelease.yaml
@@ -35,6 +35,21 @@ spec:
     cluster:
       name: "${ENVIRONMENT}"
       id: "${CILIUM_ID}"
+    clustermesh:
+      useAPIServer: true
+      apiserver:
+        tls:
+          auto:
+            method: certmanager
+            certManagerIssuerRef:
+              group: cert-manager.io
+              kind: Issuer
+              name: vault-issuer
+        kvstoremesh:
+          enabled: true
+        service:
+          type: LoadBalancer
+          loadBalancerIP: "${CILIUM_MESH_LB_IP}"
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
@@ -42,6 +57,13 @@ spec:
       enabled: true
     hubble:
       enabled: true
+      tls:
+        auto:
+          method: certmanager
+          certManagerIssuerRef:
+            group: cert-manager.io
+            kind: Issuer
+            name: vault-issuer
       metrics:
         enabled:
           - dns:query
@@ -62,7 +84,19 @@ spec:
           serviceMonitor:
             enabled: true
       ui:
-        enabled: false
+        enabled: true
+        rollOutPods: true
+        ingress:
+          enabled: true
+          hosts:
+            - &host "hubble.${DOMAIN}"
+          tls:
+            - hosts:
+                - *host
+          annotations:
+            kubernetes.io/ingress.class: nginx
+            nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
+            nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.0.0.0/8
