--- a/kubernetes/bootstrap/k8s/clustersettings.yaml
+++ b/kubernetes/bootstrap/k8s/clustersettings.yaml
@@ -9,4 +9,5 @@ data:
   DOMAIN: nucstack.com
   CILIUM_ID: "1"
   CILIUM_IPAM_CIDR: 192.168.9.224/27
+  CILIUM_MESH_LB_IP: 192.168.9.228
   K8S_SERVICE_HOST: 192.168.9.20
