readd shared service

--- a/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
@@ -49,9 +49,9 @@ spec:
           storage "file" {
             path = "/vault/data"
           }
-      # service:
-      #   annotations:
-      #     io.cilium/global-service: "true"
+      service:
+        annotations:
+          io.cilium/global-service: "true"
     injector:
       metrics:
         enabled: true
