--- a/kubernetes/apps/k8s/database/emqx/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/database/emqx/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
   uninstall:
     keepHistory: false
   dependsOn:
-    - name: local-path-provisioner
+    - name: shared-apps-local-path-provisioner
       namespace: kube-system
   values:
     replicaCount: 1
