--- a/kubernetes/flux/repositories/helm/bitnami.yaml
+++ b/kubernetes/flux/repositories/helm/bitnami.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   type: oci
-  interval: 5m
+  interval: 2h
   url: oci://registry-1.docker.io/bitnamicharts
