--- a/kubernetes/flux/repositories/helm/victoria-metrics.yaml
+++ b/kubernetes/flux/repositories/helm/victoria-metrics.yaml
@@ -2,9 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: bjw-s
+  name: victoria-metrics
   namespace: flux-system
 spec:
-  type: oci
   interval: 2h
-  url: oci://ghcr.io/bjw-s/helm
+  url: https://victoriametrics.github.io/helm-charts/
+  timeout: 3m
