--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
   uninstall:
     keepHistory: false
   dependsOn:
-    - name: shared-apps-local-path-provisioner
+    - name: local-path-provisioner
       namespace: kube-system
   values:
     fullnameOverride: victoria-metrics
