--- a/kubernetes/apps/k8s/database/influxdb/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/database/influxdb/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
   uninstall:
     keepHistory: false
   dependsOn:
-    - name: shared-apps-local-path-provisioner
+    - name: local-path-provisioner
       namespace: kube-system
   values:
     resources:
