--- a/kubernetes/apps/shared/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
   uninstall:
     keepHistory: false
   dependsOn:
-    - name: shared-apps-local-path-provisioner
+    - name: local-path-provisioner
       namespace: kube-system
   values:
     crds:
