--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -114,13 +114,10 @@ spec:
                   app.kubernetes.io/name: victoria-metrics-k8s-stack
       ingress:
         enabled: true
-        ingressClassName: internal
-        annotations:
-          hajimari.io/appName: Alert Manager
-          hajimari.io/icon: simple-icons:prometheus
+        ingressClassName: nginx
         pathType: Prefix
         hosts:
-          - &hostalert vmalert.${SECRET_DOMAIN}
+          - &hostalert vmalert.${DOMAIN}
         tls:
           - hosts:
               - *hostalert
