--- a/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
     vmcluster:
       enabled: true
       spec:
-        retentionPeriod: 1m
+        retentionPeriod: "1"
         extraArgs:
           dedup.minScrapeInterval: 60s
         replicationFactor: 1
