--- a/kubernetes/apps/shared/monitoring/grafana/app copy/kustomization.yaml
+++ b/kubernetes/apps/shared/monitoring/grafana/app copy/kustomization.yaml
@@ -2,12 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: monitoring
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
   - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./kube-prometheus-stack/ks.yaml
-  - ./grafana/ks.yaml
-  - ./signoz/ks.yaml
-  #- ./promtail/ks.yaml
+  - ./helmrelease.yaml
+  - ./ingress.yaml
