--- a/kubernetes/apps/shared/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -48,7 +48,8 @@ spec:
                 title: |-
                   [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }}{{ else }}{{ .CommonLabels.alertname }}{{ end }}
                 text: >-
-                  {{ range .Alerts -}}
+                  {{ range .Alerts -}} 
+                    **Cluster:** ${ENVIRONMENT}
                     **Alert:** {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
                   **Description:** {{ if ne .Annotations.description ""}}{{ .Annotations.description }}{{else}}N/A{{ end }}
                   **Details:**
