test victoria metrics

--- a/kubernetes/apps/shared/monitoring/kustomization.yaml
+++ b/kubernetes/apps/shared/monitoring/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./kube-prometheus-stack/ks.yaml
+  #- ./kube-prometheus-stack/ks.yaml
   - ./grafana/ks.yaml
   #- ./promtail/ks.yaml
