--- a/kubernetes/apps/k0s/monitoring/kustomization.yaml
+++ b/kubernetes/apps/k0s/monitoring/kustomization.yaml
@@ -3,4 +3,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # Pre Flux-Kustomizations
+  - ./namespace.yaml
+  - ./externalsecret.yaml
+  # Flux-Kustomizations
   - ./victoria-metrics/ks.yaml
+  - ./grafana/ks.yaml
