--- a/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -105,7 +105,7 @@ spec:
       enabled: true
       remoteWriteVMAgent: true
       spec:
-        evaluationInterval: "60"
+        evaluationInterval: 60
         externalLabels:
           cluster: ${ENVIRONMENT}
         notifiers:
@@ -127,7 +127,7 @@ spec:
     vmagent:
       enabled: true
       spec:
-        replicaCount: "1"
+        replicaCount: 1
         remoteWrite:
         - url: "https://vminsert.logfold.com/insert/0/prometheus/api/v1/write"
           # basicAuth:
