--- a/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -164,7 +164,7 @@ spec:
         vmhealth: true
         alertmanager: true
     alertmanager:
-      enabled: true
+      enabled: false
       config:
         global:
           resolve_timeout: 5m
