--- a/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -279,7 +279,7 @@ spec:
             regex: (apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket)
             action: drop
     kubeControllerManager:
-      enabled: true
+      enabled: false
       endpoints: &cp
         - 192.168.9.10
         - 192.168.9.11
@@ -293,10 +293,10 @@ spec:
     coreDns:
       enabled: true
     kubeEtcd:
-      enabled: true
+      enabled: false
       endpoints: *cp
     kubeScheduler:
-      enabled: true
+      enabled: false
       endpoints: *cp
       spec:
         metricRelabelConfigs:
