--- a/kubernetes/apps/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -135,7 +135,22 @@ spec:
         vault:
           gnetId: 12904
           revision: 2
-          datasource: Prometheus     
+          datasource: Prometheus
+        # Ref: https://grafana.com/grafana/dashboards/12683-victoriametrics-vmagent
+        victoriametrics-vmagent:
+          gnetId: 12683
+          revision: 13
+          datasource: Prometheus
+        # Ref: https://grafana.com/grafana/dashboards/11176-victoriametrics-cluster
+        victoriametrics-cluster:
+          gnetId: 11176
+          revision: 31
+          datasource: Prometheus
+        # Ref: https://grafana.com/grafana/dashboards/14950-victoriametrics-vmalert
+        victoriametrics-vmalert:
+          gnetId: 14950
+          revision: 6
+          datasource: Prometheus
         cloudnative-pg:
           url: https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/main/docs/src/samples/monitoring/grafana-dashboard.json
           datasource: Prometheus
