--- a/kubernetes/apps/shared/security/oauth2-proxy/ks.yaml
+++ b/kubernetes/apps/shared/security/oauth2-proxy/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-oauth2-proxy
+  name: shared-apps-oauth2-proxy
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/${ENVIRONMENT}/security/oauth2-proxy/app
+  path: ./kubernetes/apps/shared/security/oauth2-proxy/app
   prune: true
   sourceRef:
     kind: GitRepository
